-1.0.1.8- * Swaped wingers and centre's around in Team Editor. * Fixed the License player been ticked or unticked not saving in Player Editor. * Added extra info to the Raw Databases. * Minor Improvment.

--- a/RL26 Database Editor/About.resx
+++ b/RL26 Database Editor/About.resx
@@ -117,6 +117,14 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="credits_richTextBox.Text" xml:space="preserve">
+    <value>*** Special Thanks To ***
+
+ - BigAnt for the support.
+ - Luigi Auriemma for he's expertise over the year's.
+ - FeudalNate for PackageIO class.
+ - Facebook &amp; oleg-st for ZstdSharp - https://github.com/oleg-st/ZstdSharp</value>
+  </data>
   <data name="licence_richTextBox.Text" xml:space="preserve">
     <value>GNU GENERAL PUBLIC LICENSE
 Version 3, 29 June 2007
@@ -228,6 +236,16 @@ THERE IS NO WARRANTY FOR THE PROGRAM, TO THE EXTENT PERMITTED BY APPLICABLE LAW.
 IN NO EVENT UNLESS REQUIRED BY APPLICABLE LAW OR AGREED TO IN WRITING WILL ANY COPYRIGHT HOLDER, OR ANY OTHER PARTY WHO MODIFIES AND/OR CONVEYS THE PROGRAM AS PERMITTED ABOVE, BE LIABLE TO YOU FOR DAMAGES, INCLUDING ANY GENERAL, SPECIAL, INCIDENTAL OR CONSEQUENTIAL DAMAGES ARISING OUT OF THE USE OR INABILITY TO USE THE PROGRAM (INCLUDING BUT NOT LIMITED TO LOSS OF DATA OR DATA BEING RENDERED INACCURATE OR LOSSES SUSTAINED BY YOU OR THIRD PARTIES OR A FAILURE OF THE PROGRAM TO OPERATE WITH ANY OTHER PROGRAMS), EVEN IF SUCH HOLDER OR OTHER PARTY HAS BEEN ADVISED OF THE POSSIBILITY OF SUCH DAMAGES.
 17. Interpretation of Sections 15 and 16.
 If the disclaimer of warranty and limitation of liability provided above cannot be given local legal effect according to their terms, reviewing courts shall apply local law that most closely approximates an absolute waiver of all civil liability in connection with the Program, unless a warranty or assumption of liability accompanies a copy of the Program in return for a fee.</value>
+  </data>
+  <data name="changelog_richTextBox.Text" xml:space="preserve">
+    <value>-1.0.1.8-
+* Swaped wingers and centre's around in Team Editor.
+* Fixed the License player been ticked or unticked not saving in Player Editor.
+* Added extra info to the Raw Databases.
+* Minor Improvment.
+
+-1.0.0.5-
+* Initial Release</value>
   </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
