--- a/RL26 Database Editor/About.resx
+++ b/RL26 Database Editor/About.resx
@@ -242,7 +242,7 @@ If the disclaimer of warranty and limitation of liability provided above cannot 
 * Swaped wingers and centre's around in Team Editor.
 * Fixed the License player been ticked or unticked not saving in Player Editor.
 * Added extra info to the Raw Databases.
-* Minor Improvment.
+* Minor Improvement.
 
 -1.0.0.5-
 * Initial Release</value>
