-1.0.2.10- * Fixed a error in the Raw Databases. * Added a Index.txt file, for when the database file index changers in a game update.

--- a/RL26 Database Editor/About.resx
+++ b/RL26 Database Editor/About.resx
@@ -238,7 +238,11 @@ IN NO EVENT UNLESS REQUIRED BY APPLICABLE LAW OR AGREED TO IN WRITING WILL ANY C
 If the disclaimer of warranty and limitation of liability provided above cannot be given local legal effect according to their terms, reviewing courts shall apply local law that most closely approximates an absolute waiver of all civil liability in connection with the Program, unless a warranty or assumption of liability accompanies a copy of the Program in return for a fee.</value>
   </data>
   <data name="changelog_richTextBox.Text" xml:space="preserve">
-    <value>-1.0.1.8-
+    <value>-1.0.2.10-
+* Fixed a error in the Raw Databases.
+* Added a Index.txt file, for when the database file index changers in a game update.
+
+-1.0.1.8-
 * Swaped wingers and centre's around in Team Editor.
 * Fixed the License player been ticked or unticked not saving in Player Editor.
 * Added extra info to the Raw Databases.
